# msfpatterns

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENCE  README.md  pyproject.toml
.github/workflows/: ci-cd.yaml  ci.yaml
msfpatterns/: __init__.py  cli.py
tests/: test_cli.py  test_lib.py
